added docker files for timeout issue test

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,29 +1,37 @@
-# Use an official Python image with Node.js
-FROM python:3.12-slim
+# Start with Node base image that has debian bookworm (for stability)
+FROM node:current-bookworm
 
-# Install system deps including Node.js (23.x via NodeSource)
-RUN apt-get update && apt-get install -y curl gnupg && \
-    curl -fsSL https://deb.nodesource.com/setup_23.x | bash - && \
-    apt-get install -y nodejs python3-venv python3-pip build-essential && \
-    npm install -g npm && \
-    rm -rf /var/lib/apt/lists/*
+# Install Playwright (browsers + system deps)
+RUN npx -y playwright@^1.51.1 install --with-deps
+
+# Install Python manually
+RUN apt-get update && \
+    apt-get install -y python3 python3-venv python3-pip build-essential && \
+    rm -rf /var/lib/apt/lists/* /var/cache/apt/*
 
 # Set working directory
 WORKDIR /app
 
-# Create and activate venv
+# Create and activate virtualenv
 RUN python3 -m venv /opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
 
-# Copy and install node deps
+# Set Node.js environment variables
+#ENV NODE_OPTIONS="--max-old-space-size=4096"
+ENV NODE_ENV=production
+
+# Install Bright Data MCP
 RUN npm install -g @brightdata/mcp
 
-# Install Python requirements
+# Copy requirements and install Python deps
 COPY requirements.txt .
 RUN pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt
 
-# Copy your app
+# Copy rest of app
 COPY . .
 
+# Expose port
 EXPOSE 8000
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+
+# Run app
+CMD ["uvicorn", "app.lmain:app", "--host", "0.0.0.0", "--port", "8000"]
