--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -54,6 +54,7 @@ jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
+logfire==3.15.1
 logfire-api==3.15.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -76,7 +77,6 @@ platformdirs==4.3.8
 pluggy==1.5.0
 pre_commit==4.2.0
 prompt_toolkit==3.0.51
-protobuf==6.30.2
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
